--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e9ddc3; }
+  background: #263a07; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #25a205; }
+  background: #7d82d4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #99a298; }
+  background: #b751d3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1efe08; }
+  background: #9bcf09; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #cd1222; }
+  background: #324e19; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8a63d2; }
+  background: #e5a903; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #bc1950; }
+  background: #88370a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #570d22; }
+  background: #9d92d5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8562a0; }
+  background: #bad915; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0befed; }
+  background: #8a15e7; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8c63c6; }
+  background: #6f800a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #20ab8b; }
+  background: #37723e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c40788; }
+  background: #906e6f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #213d77; }
+  background: #3c3569; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e2f25a; }
+  background: #1defe8; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #1752a7; }
+  background: #c77a6e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0b8fcb; }
+  background: #5a9d1a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a5bc46; }
+  background: #c5d3fd; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #32537d; }
+  background: #6e0ad3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f7c06b; }
+  background: #f8ede8; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0574be; }
+  background: #44caad; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d60d28; }
+  background: #d43ec6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #2707d4; }
+  background: #655ef2; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #3d774b; }
+  background: #f13871; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #55ba69; }
+  background: #643046; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b5a35a; }
+  background: #da4eda; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #6c7601; }
+  background: #13f215; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #45c686; }
+  background: #32ea5a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #7ed6b1; }
+  background: #85f437; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #320aaa; }
+  background: #17eae2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f8cb98; }
+  background: #7d06ef; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7b2f7c; }
+  background: #84ef01; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #735b6f; }
+  background: #9a8b27; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #234395; }
+  background: #8b0da0; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ee651f; }
+  background: #3eb283; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ef9883; }
+  background: #c0d471; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cb9671; }
+  background: #2a6225; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #7340f2; }
+  background: #c84cfb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bc3443; }
+  background: #66e8bc; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4f847b; }
+  background: #c0acfd; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b96b6e; }
+  background: #89a627; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5ef1b1; }
+  background: #f115c3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #eb4b70; }
+  background: #831ca0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7270f7; }
+  background: #6dbfa7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #2bc36f; }
+  background: #a98e92; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4ce9c7; }
+  background: #52b936; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #16cdbf; }
+  background: #988cf4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #140383; }
+  background: #c33202; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #9fb83d; }
+  background: #6d931f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4db7cf; }
+  background: #e02a44; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #437ef3; }
+  background: #318a79; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d444f0; }
+  background: #78cb09; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0403cd; }
+  background: #8a2e0d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #011468; }
+  background: #579130; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #69e89c; }
+  background: #7e6127; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2f465d; }
+  background: #544130; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #9d8eed; }
+  background: #aa1950; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ead52a; }
+  background: #f35257; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #04328c; }
+  background: #f5d969; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e8229f; }
+  background: #982e7e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5a1d23; }
+  background: #32cbbc; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #38e1fe; }
+  background: #16073d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #43924c; }
+  background: #4246d1; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8a2768; }
+  background: #0a33dc; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #313925; }
+  background: #09bc52; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #bae7fd; }
+  background: #ebe752; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1c58ae; }
+  background: #222322; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9a9391; }
+  background: #41eb2b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f0608b; }
+  background: #b0f7da; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #cdb447; }
+  background: #1e0764; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b4bc38; }
+  background: #8d74be; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f67655; }
+  background: #ca54dc; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b7e91b; }
+  background: #43eaf4; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #15876c; }
+  background: #1069a0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #130366; }
+  background: #213b83; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #86cb14; }
+  background: #8430f2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e34821; }
+  background: #b192cd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #60cf9c; }
+  background: #e83c1e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #cb8298; }
+  background: #b51f85; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #4d4637; }
+  background: #19c7cb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #fcba4c; }
+  background: #f0a5f6; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8b0174; }
+  background: #3a2298; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #209b91; }
+  background: #34527b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #90838b; }
+  background: #474a41; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a91f2f; }
+  background: #f11ef0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #08c1ee; }
+  background: #22fc60; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #aa6195; }
+  background: #a17702; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #930b45; }
+  background: #c082ba; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c7a46f; }
+  background: #84984e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1d3735; }
+  background: #9edeaf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #41dac9; }
+  background: #9e3873; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7ee27f; }
+  background: #98e085; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7b963c; }
+  background: #306701; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #84d136; }
+  background: #15e026; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #15d974; }
+  background: #85231e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #12e450; }
+  background: #9ee2d9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #190319; }
+  background: #5c03c5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c3ceab; }
+  background: #39ea2d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #eae105; }
+  background: #ad8aeb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8d7585; }
+  background: #eed414; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16301,12 +16301,139 @@ option {
   align-items: center;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
-  margin: 0px 0px 10px;
-  padding: 0px 0px 14px; }
+  margin: 10px 0px 10px;
+  padding: 14px 0px 14px; }
 
 .assets-details-modal-title {
   font-size: 20px;
   color: #4c4c4c; }
+
+.grid-box-tabs-flow {
+  display: grid;
+  grid-template-columns: auto 200px;
+  border-bottom: 1px solid #808285; }
+
+.summary-box {
+  background: #f6f6f6;
+  border-top: 1px solid #4c4c4c;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100%; }
+  .summary-box img {
+    width: 18px; }
+
+.tabs-flow-main-header-row {
+  /* overflow-x: scroll; */
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 10px;
+  /* overflow-y: hidden; */
+  scroll-behavior: smooth; }
+  .tabs-flow-main-header-row .mCustomScrollBox {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr)); }
+
+.main-summary-tabs-flow {
+  overflow-x: scroll;
+  display: grid;
+  grid-auto-flow: column;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  background: #f6f6f6; }
+  .main-summary-tabs-flow li {
+    text-align: center; }
+    .main-summary-tabs-flow li a {
+      text-decoration: none;
+      color: #4c4c4c;
+      font-size: 16px;
+      padding: 8px 14px;
+      margin: 0px;
+      display: inline-block;
+      white-space: pre; }
+    .main-summary-tabs-flow li a.active {
+      font-weight: 600;
+      background: transparent !important;
+      border: 0px solid #ccc; }
+  .main-summary-tabs-flow .mCSB_dragger_bar {
+    margin: 10px auto !important; }
+  .main-summary-tabs-flow .mCSB_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr)); }
+
+.events-policy-tabs {
+  overflow-x: scroll;
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 26px;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  align-items: center;
+  padding: 0px 20px;
+  position: relative; }
+  .events-policy-tabs::before {
+    content: "";
+    position: absolute;
+    background-image: url(../images/icon-pipe.svg);
+    width: 1px;
+    height: 24px; }
+
+.tabs-flowing-box {
+  display: grid;
+  grid-template-columns: 60px 1fr;
+  align-items: center;
+  justify-content: center; }
+  .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a {
+    padding: 8px 18px;
+    text-align: center; }
+    .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a img {
+      width: 30px; }
+  .tabs-flowing-box .grid-box-tabs-flow ul .active {
+    background: #f6f6f6;
+    border-top: 1px solid #4c4c4c;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    position: relative; }
+    .tabs-flowing-box .grid-box-tabs-flow ul .active::before {
+      content: "";
+      position: absolute;
+      background: #f6f6f6;
+      width: 100%;
+      height: 20px;
+      bottom: 0px; }
+  .tabs-flowing-box .mCSB_dragger_bar {
+    margin: 10px auto !important; }
+
+.events-policy-tabs .mCSB_container {
+  display: grid;
+  grid-gap: 20px;
+  align-items: center; }
+
+.hori-scroll {
+  overflow-x: auto; }
+  .hori-scroll .mCustomScrollBox {
+    padding-bottom: 0px !important; }
+  .hori-scroll .mCSB_horizontal.mCSB_inside > .mCSB_container {
+    margin-right: 0;
+    margin-bottom: 0px; }
+  .hori-scroll .mCSB_container {
+    /* width: auto; */
+    /* height: auto; */
+    display: grid;
+    grid-auto-flow: column;
+    overflow: hidden; }
+
+.label-list-hori {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 6px;
+  align-items: center; }
+  .label-list-hori label {
+    font-size: 14px;
+    color: #4c4c4c;
+    margin: 0px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
