--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #263a07; }
+  background: #35530b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7d82d4; }
+  background: #c646d0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b751d3; }
+  background: #e89634; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9bcf09; }
+  background: #c5e1ba; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #324e19; }
+  background: #19525d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e5a903; }
+  background: #80e607; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #88370a; }
+  background: #5b973c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9d92d5; }
+  background: #bc6c84; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #bad915; }
+  background: #89d26a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8a15e7; }
+  background: #ec8b4c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6f800a; }
+  background: #a1df7c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #37723e; }
+  background: #7f12da; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #906e6f; }
+  background: #5af0a1; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3c3569; }
+  background: #120754; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1defe8; }
+  background: #c461da; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c77a6e; }
+  background: #5c4d4b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5a9d1a; }
+  background: #bf0460; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c5d3fd; }
+  background: #ef9957; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6e0ad3; }
+  background: #3ef4a2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f8ede8; }
+  background: #5dc5fe; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #44caad; }
+  background: #2021e9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d43ec6; }
+  background: #93bb08; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #655ef2; }
+  background: #ab68b0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f13871; }
+  background: #6f9eb3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #643046; }
+  background: #f069ce; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #da4eda; }
+  background: #c8f570; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #13f215; }
+  background: #f5e144; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #32ea5a; }
+  background: #791c50; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #85f437; }
+  background: #d5952c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #17eae2; }
+  background: #917faa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7d06ef; }
+  background: #d71df1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #84ef01; }
+  background: #fc6bf1; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9a8b27; }
+  background: #2a3d6a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8b0da0; }
+  background: #dad14a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3eb283; }
+  background: #52402f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c0d471; }
+  background: #fc44d1; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2a6225; }
+  background: #5418eb; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c84cfb; }
+  background: #cc5f78; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #66e8bc; }
+  background: #6d2749; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c0acfd; }
+  background: #f73f01; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #89a627; }
+  background: #69ee2e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f115c3; }
+  background: #93d5b5; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #831ca0; }
+  background: #719674; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6dbfa7; }
+  background: #c64a4b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a98e92; }
+  background: #1ea192; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #52b936; }
+  background: #282521; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #988cf4; }
+  background: #092e6b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c33202; }
+  background: #05540b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6d931f; }
+  background: #25a72b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e02a44; }
+  background: #24fee6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #318a79; }
+  background: #9ba773; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #78cb09; }
+  background: #101d14; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8a2e0d; }
+  background: #fe78c9; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #579130; }
+  background: #04c74d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7e6127; }
+  background: #12cc02; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #544130; }
+  background: #012628; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #aa1950; }
+  background: #714e2d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f35257; }
+  background: #0ba43c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f5d969; }
+  background: #c52b4f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #982e7e; }
+  background: #ab8472; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #32cbbc; }
+  background: #ccabee; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #16073d; }
+  background: #b05446; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4246d1; }
+  background: #f17265; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0a33dc; }
+  background: #3e9b42; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #09bc52; }
+  background: #05bc42; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #ebe752; }
+  background: #e1389b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #222322; }
+  background: #e8a6c2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #41eb2b; }
+  background: #472fbb; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b0f7da; }
+  background: #7fdb62; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1e0764; }
+  background: #41a02f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8d74be; }
+  background: #a816c6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ca54dc; }
+  background: #1cd42a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #43eaf4; }
+  background: #ad8f74; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1069a0; }
+  background: #b40d68; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #213b83; }
+  background: #487756; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #8430f2; }
+  background: #e34a36; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b192cd; }
+  background: #931b45; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #e83c1e; }
+  background: #3f7f8c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b51f85; }
+  background: #2b6ef5; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #19c7cb; }
+  background: #b60723; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f0a5f6; }
+  background: #a9989c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #3a2298; }
+  background: #2bdb48; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #34527b; }
+  background: #94a17d; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #474a41; }
+  background: #9b0897; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f11ef0; }
+  background: #49283e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #22fc60; }
+  background: #07527a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a17702; }
+  background: #1850e3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c082ba; }
+  background: #acb17f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #84984e; }
+  background: #53a52a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #9edeaf; }
+  background: #dd3d2c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #9e3873; }
+  background: #483d70; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #98e085; }
+  background: #88c419; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #306701; }
+  background: #1148f7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #15e026; }
+  background: #f073b6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #85231e; }
+  background: #b0ada6; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9ee2d9; }
+  background: #9136f7; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5c03c5; }
+  background: #ad4c3a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #39ea2d; }
+  background: #6d7499; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ad8aeb; }
+  background: #99a630; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #eed414; }
+  background: #50aac0; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16310,7 +16310,7 @@ option {
 
 .grid-box-tabs-flow {
   display: grid;
-  grid-template-columns: auto 200px;
+  grid-template-columns: auto 165px;
   border-bottom: 1px solid #808285; }
 
 .summary-box {
@@ -16336,18 +16336,20 @@ option {
 
 .main-summary-tabs-flow {
   overflow-x: scroll;
-  display: grid;
-  grid-auto-flow: column;
+  display: flex;
   overflow-y: hidden;
   scroll-behavior: smooth;
-  background: #f6f6f6; }
+  background: #f6f6f6;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%; }
   .main-summary-tabs-flow li {
-    text-align: center; }
+    text-align: left; }
     .main-summary-tabs-flow li a {
       text-decoration: none;
       color: #4c4c4c;
       font-size: 16px;
-      padding: 8px 14px;
+      padding: 8px 6px;
       margin: 0px;
       display: inline-block;
       white-space: pre; }
@@ -16357,26 +16359,26 @@ option {
       border: 0px solid #ccc; }
   .main-summary-tabs-flow .mCSB_dragger_bar {
     margin: 10px auto !important; }
-  .main-summary-tabs-flow .mCSB_container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr)); }
 
 .events-policy-tabs {
   overflow-x: scroll;
   display: grid;
   grid-auto-flow: column;
-  grid-gap: 26px;
+  grid-gap: 15px;
   overflow-y: hidden;
   scroll-behavior: smooth;
   align-items: center;
   padding: 0px 20px;
-  position: relative; }
+  position: relative;
+  justify-content: space-around; }
   .events-policy-tabs::before {
     content: "";
     position: absolute;
     background-image: url(../images/icon-pipe.svg);
     width: 1px;
     height: 24px; }
+  .events-policy-tabs a {
+    text-align: center; }
 
 .tabs-flowing-box {
   display: grid;
@@ -16384,7 +16386,7 @@ option {
   align-items: center;
   justify-content: center; }
   .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a {
-    padding: 8px 18px;
+    padding: 6px 14px;
     text-align: center; }
     .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a img {
       width: 30px; }
@@ -16399,7 +16401,6 @@ option {
     .tabs-flowing-box .grid-box-tabs-flow ul .active::before {
       content: "";
       position: absolute;
-      background: #f6f6f6;
       width: 100%;
       height: 20px;
       bottom: 0px; }
@@ -16421,8 +16422,7 @@ option {
   .hori-scroll .mCSB_container {
     /* width: auto; */
     /* height: auto; */
-    display: grid;
-    grid-auto-flow: column;
+    display: flex;
     overflow: hidden; }
 
 .label-list-hori {
