--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4279,7 +4279,7 @@ grid-gap: 15px;
 
 .grid-box-tabs-flow {
   display: grid;
-  grid-template-columns: auto 200px;
+  grid-template-columns: auto 165px;
   border-bottom: 1px solid #808285;
  }
  
@@ -4313,20 +4313,23 @@ grid-gap: 15px;
  
  .main-summary-tabs-flow {
   overflow-x: scroll;
-  display: grid;
-  grid-auto-flow: column;
+  display: flex;
+  // grid-auto-flow: column;
   overflow-y: hidden;
   scroll-behavior: smooth;
   background: #f6f6f6;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
   li {
    // white-space: pre;
    // display: flex;
-   text-align: center;
+   text-align: left;
    a {
     text-decoration: none;
     color: #4c4c4c;
     font-size: 16px;
-    padding: 8px 14px;
+    padding: 8px 6px;
     margin: 0px;
     display: inline-block;
     white-space: pre;
@@ -4341,22 +4344,19 @@ grid-gap: 15px;
   .mCSB_dragger_bar {
     margin: 10px auto !important;
   }
-  .mCSB_container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(130px,1fr)); 
-  }
  }
  
  .events-policy-tabs {
   overflow-x: scroll;
   display: grid;
   grid-auto-flow: column;
-  grid-gap: 26px;
+  grid-gap: 15px;
   overflow-y: hidden;
   scroll-behavior: smooth;
   align-items: center;
   padding: 0px 20px;
   position: relative;
+  justify-content: space-around;
  
   &::before {
    content: "";
@@ -4369,6 +4369,7 @@ grid-gap: 15px;
   a {
    // white-space: pre;
    // display: flex;
+   text-align: center;
   }
  }
  
@@ -4383,7 +4384,7 @@ grid-gap: 15px;
       .nav-item {
 
         a {
-          padding: 8px 18px;
+          padding: 6px 14px;
           text-align: center;
 
           img {
@@ -4402,7 +4403,7 @@ grid-gap: 15px;
         &::before {
           content: "";
           position: absolute;
-          background:#f6f6f6 ;
+          // background:#f6f6f6 ;
           width: 100%;
           height: 20px;
           bottom: 0px;
@@ -4439,8 +4440,8 @@ grid-gap: 15px;
   .mCSB_container {
    /* width: auto; */
    /* height: auto; */
-   display: grid;
-   grid-auto-flow: column;
+   display: flex;
+  //  grid-auto-flow: column;
    overflow: hidden;
   }
  }
