--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #35530b; }
+  background: #511eb4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c646d0; }
+  background: #cb89aa; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e89634; }
+  background: #06018b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c5e1ba; }
+  background: #b8ec96; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #19525d; }
+  background: #fc0251; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #80e607; }
+  background: #f23b98; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5b973c; }
+  background: #f23fe0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bc6c84; }
+  background: #64d03f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #89d26a; }
+  background: #789e89; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ec8b4c; }
+  background: #0f2744; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a1df7c; }
+  background: #5e8ed0; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7f12da; }
+  background: #d91c3f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5af0a1; }
+  background: #c33bd7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #120754; }
+  background: #e2c4f3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c461da; }
+  background: #a7f288; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5c4d4b; }
+  background: #c366b4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #bf0460; }
+  background: #665823; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ef9957; }
+  background: #dbdbec; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3ef4a2; }
+  background: #8a8313; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5dc5fe; }
+  background: #e15031; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2021e9; }
+  background: #a6a55b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #93bb08; }
+  background: #fd74bb; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ab68b0; }
+  background: #ce3902; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6f9eb3; }
+  background: #4b68c9; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f069ce; }
+  background: #b365ca; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c8f570; }
+  background: #8698f2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f5e144; }
+  background: #46e40f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #791c50; }
+  background: #7f08cf; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d5952c; }
+  background: #392767; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #917faa; }
+  background: #274f48; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d71df1; }
+  background: #5f5015; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fc6bf1; }
+  background: #9d3464; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2a3d6a; }
+  background: #9de229; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #dad14a; }
+  background: #f2e74f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #52402f; }
+  background: #e7f160; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fc44d1; }
+  background: #996511; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5418eb; }
+  background: #2c0fc3; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #cc5f78; }
+  background: #7e4120; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6d2749; }
+  background: #0bb0d6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f73f01; }
+  background: #71d04f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #69ee2e; }
+  background: #8dbc92; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #93d5b5; }
+  background: #72bb69; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #719674; }
+  background: #a0b0d4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c64a4b; }
+  background: #fba121; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1ea192; }
+  background: #075277; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #282521; }
+  background: #20cc5c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #092e6b; }
+  background: #77cc3e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #05540b; }
+  background: #5de5de; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #25a72b; }
+  background: #d45252; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #24fee6; }
+  background: #5912ce; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #9ba773; }
+  background: #3749af; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #101d14; }
+  background: #451c23; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #fe78c9; }
+  background: #d38714; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #04c74d; }
+  background: #a08291; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #12cc02; }
+  background: #2e9d2d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #012628; }
+  background: #f9d792; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #714e2d; }
+  background: #37d3b5; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0ba43c; }
+  background: #5272b9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c52b4f; }
+  background: #a50e1b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ab8472; }
+  background: #4f8291; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ccabee; }
+  background: #f71081; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b05446; }
+  background: #1364eb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f17265; }
+  background: #56ff09; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3e9b42; }
+  background: #ad0621; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #05bc42; }
+  background: #d0e971; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e1389b; }
+  background: #ac6da8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e8a6c2; }
+  background: #eec28e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #472fbb; }
+  background: #270402; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #7fdb62; }
+  background: #5af4cc; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #41a02f; }
+  background: #486191; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a816c6; }
+  background: #2c95b1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1cd42a; }
+  background: #2f40b8; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ad8f74; }
+  background: #d7474e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b40d68; }
+  background: #38d1a6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #487756; }
+  background: #e5d265; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e34a36; }
+  background: #16acf7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #931b45; }
+  background: #37915e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3f7f8c; }
+  background: #731e6a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2b6ef5; }
+  background: #7e4b4b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b60723; }
+  background: #c3a997; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a9989c; }
+  background: #c677d3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2bdb48; }
+  background: #7b9e09; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #94a17d; }
+  background: #746336; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9b0897; }
+  background: #fa58ad; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #49283e; }
+  background: #39e9ab; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #07527a; }
+  background: #91524c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #1850e3; }
+  background: #378db0; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #acb17f; }
+  background: #d0c5ab; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #53a52a; }
+  background: #2e60a7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #dd3d2c; }
+  background: #dfddf5; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #483d70; }
+  background: #1e6819; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #88c419; }
+  background: #83099a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1148f7; }
+  background: #18b352; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f073b6; }
+  background: #c9cb7f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b0ada6; }
+  background: #21ebc9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9136f7; }
+  background: #549d7d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ad4c3a; }
+  background: #fee55c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6d7499; }
+  background: #b982ba; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #99a630; }
+  background: #0eff49; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #50aac0; }
+  background: #2bfe99; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16310,7 +16310,7 @@ option {
 
 .grid-box-tabs-flow {
   display: grid;
-  grid-template-columns: auto 165px;
+  grid-template-columns: auto 170px;
   border-bottom: 1px solid #808285; }
 
 .summary-box {
@@ -16349,10 +16349,12 @@ option {
       text-decoration: none;
       color: #4c4c4c;
       font-size: 16px;
-      padding: 8px 6px;
+      padding: 8px 15px;
       margin: 0px;
       display: inline-block;
       white-space: pre; }
+      .main-summary-tabs-flow li a:hover {
+        font-weight: 600; }
     .main-summary-tabs-flow li a.active {
       font-weight: 600;
       background: transparent !important;
@@ -16368,7 +16370,7 @@ option {
   overflow-y: hidden;
   scroll-behavior: smooth;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0px 5px;
   position: relative;
   justify-content: space-around; }
   .events-policy-tabs::before {
@@ -16378,7 +16380,16 @@ option {
     width: 1px;
     height: 24px; }
   .events-policy-tabs a {
-    text-align: center; }
+    text-align: center;
+    padding: 6px 14px; }
+  .events-policy-tabs a.active {
+    background: #f6f6f6;
+    border-top: 1px solid #4c4c4c;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    position: relative; }
 
 .tabs-flowing-box {
   display: grid;
@@ -16387,7 +16398,11 @@ option {
   justify-content: center; }
   .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a {
     padding: 6px 14px;
-    text-align: center; }
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%; }
     .tabs-flowing-box .grid-box-tabs-flow ul .nav-item a img {
       width: 30px; }
   .tabs-flowing-box .grid-box-tabs-flow ul .active {
@@ -16409,7 +16424,7 @@ option {
 
 .events-policy-tabs .mCSB_container {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 0px;
   align-items: center; }
 
 .hori-scroll {
